@@ -487,6 +487,7 @@ SEXP attribute_hidden do_length(SEXP call, SEXP op, SEXP args, SEXP rho)
     return ScalarInteger(length(x));
 }
 
+// auxiliary for do_lengths_*(), i.e., R's lengths()
 static R_xlen_t getElementLength(SEXP x, R_xlen_t i, SEXP call, SEXP rho)
 {
     static SEXP length_op = NULL;
@@ -531,25 +532,46 @@ SEXP attribute_hidden do_lengths(SEXP call, SEXP op, SEXP args, SEXP rho)
     int useNames = asLogical(CADR(args));
     if (useNames == NA_LOGICAL)
         error(_("invalid '%s' value"), "USE.NAMES");
-    if (!isVectorList(x))
-        error(_("'%s' must be a list"), "x");
+    Rboolean isList = isVectorList(x);
+    if (!isList)
+        switch (TYPEOF(x))
+        {
+        case NILSXP:
+        case CHARSXP:
+        case LGLSXP:
+        case INTSXP:
+        case REALSXP:
+        case CPLXSXP:
+        case STRSXP:
+        case RAWSXP:
+            break;
+        default:
+            error(_("'%s' must be a list or atomic vector"), "x");
+        }
     x_len = xlength(x);
     PROTECT(ans = allocVector(INTSXP, x_len));
-    for (i = 0, ans_elt = INTEGER(ans); i < x_len; i++, ans_elt++)
+    if (isList)
     {
-        R_xlen_t x_elt_len = getElementLength(x, i, call, rho);
-#ifdef LONG_VECTOR_SUPPORT
-        if (x_elt_len > INT_MAX)
+        for (i = 0, ans_elt = INTEGER(ans); i < x_len; i++, ans_elt++)
         {
-            ans = do_lengths_long(x, call, rho);
-            UNPROTECT(1);
-            PROTECT(ans);
-            break;
-        }
+            R_xlen_t x_elt_len = getElementLength(x, i, call, rho);
+#ifdef LONG_VECTOR_SUPPORT
+            if (x_elt_len > INT_MAX)
+            {
+                ans = do_lengths_long(x, call, rho);
+                UNPROTECT(1);
+                PROTECT(ans);
+                break;
+            }
 #endif
-        *ans_elt = (int)x_elt_len;
+            *ans_elt = (int)x_elt_len;
+        }
     }
-
+    else
+    { // atomic: every element has length 1
+        for (i = 0, ans_elt = INTEGER(ans); i < x_len; i++, ans_elt++)
+            *ans_elt = 1;
+    }
     if (useNames)
     {
         SEXP names = getAttrib(x, R_NamesSymbol);
